# APIserver/models/model_haiku_author.go
@@ -2,7 +2,5 @@ package models
 
 type HaikuAuthor struct {
 
-	UserId float32 `json:"user_id"`
-
-	UserName string `json:"user_name"`
+	UserId int64 `json:"user_id"`
 }
